--- a/build.xml
+++ b/build.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<project name="Aufgabe1-3" default="build" basedir="./Aufgabe1-3">
+<project name="Aufgabe4" default="build" basedir="./Aufgabe4">
   <target name="build">
     <javac srcdir="." includeantruntime="false" />
   </target>
